[dev] Fix word break in table cells

--- a/src/styles/element-plus/index.scss
+++ b/src/styles/element-plus/index.scss
@@ -209,3 +209,9 @@ body {
 .el-form-item__error {
   position: unset;
 }
+
+/* Tables */
+
+.el-table .cell {
+  word-break: normal !important;
+}
